k8s/add-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add-svc
spec:
  selector:
    app: add-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
