k8s/backend-service.yaml
# Internal API service.
apiVersion: v1
kind: Service
metadata:
  name: math-backend-svc
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
