k8s/multi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-svc
spec:
  selector:
    app: multi-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
