k8s/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-svc
spec:
  selector:
    app: orchestrator
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
